--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
       with:
-        name: production-files
+        name: build-files
         path: ./build
     
   deploy:
@@ -37,7 +37,7 @@ jobs:
     - name: download artifacts
       uses: actions/download-artifact@v2
       with:
-        name: build files
+        name: build-files
         path: ./build
     - name: deploy to GH pages
       uses: peaceiris/actions-gh-pages@v3
